# nimble

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
docs/: changelog.md  changelog.yaml  index.md
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  nothing.c
